test/functions/jturner/first-class-generic-function.future
bug: need to add a check whether the function is generic.

Right now the compiler does not seem to realize that the function is generic.
Since that is not supported, it crashes with an internal error while processing.
In the developer mode, it is:

first-class-generic-function.chpl:72: In function 'scalar_outer_product_cholesky':
first-class-generic-function.chpl:90: error: actual type is unknown or generic [callInfo.cpp:35]

Instead it should report this as an error message indicating that
this is caused by the user code. The message needs to point to the call site
of run_one_cholesky_algorithm, where a generic function is being passed.

TODO: simplify this test case.

TODO: add a test that assigns a generic function to a variable.

Remark: the source code, first-class-generic-function.chpl, is some
code from John Lewis, not simplified. It is of no significance on its own.
